--- a/app.yaml
+++ b/app.yaml
@@ -15,7 +15,7 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
- name: k8s-activity-Lazaro #change this
+ name: k8s-activity-lazaro #change this
  labels:
  app: nginx
 spec:
